--- a/main.css
+++ b/main.css
@@ -193,6 +193,11 @@
 .Enemy {
   position: relative;
   top: 50px;
+  visibility: hidden;
+}
+
+.playerCard {
+  visibility: hidden;
 }
 
 .newCard {
